# Thin-Pod-Gateway-rev-0.1

./: .gitattributes  .gitignore  LICENSE-DOCUMENTATION.md  LICENSE-HARDWARE.md  LICENSE-SOFTWARE.md  LICENSE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.upload/: hardware_payload.b64.part00  hardware_payload.b64.part01  hardware_payload.b64.part02  hardware_payload.b64.part03  hardware_payload.b64.part04
docs/: 85_Engineering_Log.md  Stage1_Firmware_Evidence_README.md  Thin-Pod_Evidence-Grounded_Maintenance_Reporting_Additional_Design_Considerations.md  Thin-Pod_Evidence-Grounded_Maintenance_Reporting_Prototype_v0.1.md  ThinPod_Open_Hardware_Platform_for_DSP_TinyML.md  ThinPod_UWB_Roles_Stage1_Summary.md  certification-scope.md  data-path-fault-injection-and-recovery-tests.md  data-path-flow-control-and-buffering.md  dwm-to-nucleo-host-interface-protocol.md  footprint-provenance.md  gateway-bring-up-and-verification-protocol.md  measurement-record-and-provenance-model.md  next-architecture-additions-and-acquisition-qualification.md  node-acquisition-and-sampling-contract.md  system-interface-control-document.md  window-throughput-and-airtime-budget.md
firmware/: README.md
firmware/gateway/uwb_initiator_stage2_rf/: CMakeLists.txt  README.md  prj.conf
firmware/gateway/uwb_initiator_stage2_rf/dts/bindings/uwb/: qorvo,dw3000.yaml
firmware/gateway/uwb_initiator_stage2_rf/src/: main.c
logs/: 100_Engineering_Log.md  101_Engineering_Log.md  88_Engineering_Log.md  89_Engineering_Log.md  90_Engineering_Log.md  91_Engineering_Log.md  92_Engineering_log.md  (+7 more)
(+127 files in other folders)
